# academic-and-personal-project

./: .name  .ninja_deps  .ninja_log  AirQuality.cpp  AirQuality.h  ApiCall.cpp  ApiCall.h  CMakeCache.txt  CMakeLists.txt  DailyWeatherVar.cpp  DailyWeatherVar.h  EuropeanAir.cpp  EuropeanAir.h  ExportData.cpp  ExportData.h  GetRequest.cpp  GetRequest.h  HourlyAir.cpp  HourlyAir.h  HourlyForecast.cpp  HourlyForecast.h  LocationManagerMenu.cpp  LocationManagerMenu.h  PressureLvl.cpp  PressureLvl.h  SolarRadiation.cpp  SolarRadiation.h  WeatherModel.cpp  WeatherModel.h  WeatherVariable.cpp  WeatherVariable.h  build.ninja  cmake_install.cmake  favourites.txt  gitconfig  hourly_forecast.csv  json.h  locationsfile.txt  main.cpp  modules.xml  (+3 more)
